--- a/writing/cogsci2018/library.bib
+++ b/writing/cogsci2018/library.bib
@@ -123,3 +123,76 @@
   publisher={American Psychological Association}
 }
 
+@article{grabinger1995rich,
+  title={Rich environments for active learning: A definition},
+  author={Grabinger, R Scott and Dunlap, Joanna C},
+  journal={ALT-J},
+  volume={3},
+  number={2},
+  pages={5--34},
+  year={1995},
+  publisher={Taylor \& Francis}
+}
+
+@article{prince2004does,
+  title={Does active learning work? A review of the research},
+  author={Prince, Michael},
+  journal={Journal of engineering education},
+  volume={93},
+  number={3},
+  pages={223--231},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+
+@article{settles2012active,
+  title={Active learning},
+  author={Settles, Burr},
+  journal={Synthesis Lectures on Artificial Intelligence and Machine Learning},
+  volume={6},
+  number={1},
+  pages={1--114},
+  year={2012},
+  publisher={Morgan \& Claypool Publishers}
+}
+
+@article{ramirez2017active,
+  title={Active learning: an empirical study of common baselines},
+  author={Ramirez-Loaiza, Maria E and Sharma, Manali and Kumar, Geet and Bilgic, Mustafa},
+  journal={Data Mining and Knowledge Discovery},
+  volume={31},
+  number={2},
+  pages={287--313},
+  year={2017},
+  publisher={Springer}
+}
+
+@inproceedings{castro2009human,
+  title={Human active learning},
+  author={Castro, Rui M and Kalish, Charles and Nowak, Robert and Qian, Ruichen and Rogers, Tim and Zhu, Xiaojin},
+  booktitle={Advances in neural information processing systems},
+  pages={241--248},
+  year={2009}
+}
+
+@article{chi2009active,
+  title={Active-constructive-interactive: A conceptual framework for differentiating learning activities},
+  author={Chi, Michelene TH},
+  journal={Topics in Cognitive Science},
+  volume={1},
+  number={1},
+  pages={73--105},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{shafto2012learning,
+  title={Learning from others: The consequences of psychological reasoning for human learning},
+  author={Shafto, Patrick and Goodman, Noah D and Frank, Michael C},
+  journal={Perspectives on Psychological Science},
+  volume={7},
+  number={4},
+  pages={341--351},
+  year={2012},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
