--- a/R/02_visualization.Rmd
+++ b/R/02_visualization.Rmd
@@ -3,13 +3,10 @@ title: "SOC-INFO Visualization"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
-```
-
 ## Setup
 
-```{r}
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
 library(knitr); library(magrittr); library(tidyverse); library(here)
 source(here("R/soc_info_helpers.R"))
 ```
@@ -134,21 +131,42 @@ d_e1 %>%
 
 Plot counts of different action responses for the learning vs. performance goal conditions.
 
-```{r}
-action_plot <- d_e1 %>% 
-  distinct(condition, action_response, id) %>%
-  count(action_response, condition) %>% 
+```{r get prop credible intervals e1}
+library(binom)
+
+hpd_ref <- d_e1 %>% 
+  distinct(id, condition, action_r_collap) %>%
+  group_by(condition) %>% 
+  mutate(n_participants = n()) %>% 
+  count(action_r_collap, n_participants, condition) %>% 
+  filter(action_r_collap == "single") 
+
+hpd <- hpd_ref %>% 
+  split(.$condition) %>%
+  map_df(~ binom.bayes(x = .$n, n = .$n_participants, conf.level = 0.95))
+  
+hpd_final <- bind_cols(hpd_ref, hpd)
+```
+
+```{r make action plot e1}
+action_plot_e1 <- d_e1 %>% 
+  distinct(condition, action_r_collap, id) %>%
+  count(action_r_collap, condition) %>% 
   group_by(condition) %>% 
   mutate(prop = n / sum(n)) %>% 
-  ggplot(aes(x = condition, y = prop, fill = fct_rev(action_response))) +
+  ggplot(aes(x = condition, y = prop, fill = action_r_collap, alpha = action_r_collap)) +
   geom_bar(stat = "identity", width = 0.4) +
+  geom_linerange(aes(x = condition, ymin = lower, ymax = upper), inherit.aes = F,
+                 data = hpd_final) +
   lims(y = c(0,1)) +
-  labs(x = NULL, y = "Prop. Participants", fill = "action response:") +
-  #scale_alpha_discrete(range = c(0.4,1)) + 
+  guides(alpha = F) +
+  scale_alpha_discrete(range = c(0.6, 1)) +
   ggthemes::scale_fill_ptol() +
+  labs(x = NULL, y = "Prop. Participants", fill = "action response:") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
-        plot.margin=unit(c(1,1,1.5,1.2),"cm")) 
+        #panel.grid.major = element_blank(),
+        plot.margin=unit(c(0.5,1.2,0.5,1),"cm")) 
 ```
 
 Make a table of the raw counts.
@@ -164,19 +182,7 @@ d_e1 %>%
 
 ### Response times
 
-Plot the distribution of overall time on the experiment across conditions.
-
-```{r}
-d_e1 %>% 
-  distinct(id, experiment_time, condition) %>% 
-  filter(experiment_time <= 2 * sd(experiment_time)) %>% 
-  ggplot(aes(x = condition, y = experiment_time / 60)) +
-  geom_boxplot(width = 0.3) +
-  lims(y = c(0,8)) +
-  labs(y = "Time (min)")
-```
-
-Make the same plot, but for the time spent on the action decision.
+time spent on the action decision.
 
 ```{r}
 rt_plot <- d_e1 %>% 
@@ -189,7 +195,8 @@ rt_plot <- d_e1 %>%
   geom_jitter(width = 0.05, shape = 21, alpha = 0.9, color = "grey30", size = 1) + 
   labs(y = c("response time (sec)"), x= NULL) +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
-        panel.grid.major = element_blank(),
+        #panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
 
@@ -238,8 +245,8 @@ Plot entropy change as a function of condition.
 ```{r}
 entropy_plot <- d_e1 %>% 
   distinct(id, condition, social_condition, entropy_change, action_r_collap) %>% 
-  ggplot(aes(x = condition, y = entropy_change, color = fct_rev(action_r_collap),
-             fill = fct_rev(action_r_collap))) +
+  ggplot(aes(x = condition, y = entropy_change, color = action_r_collap,
+             fill = action_r_collap)) +
   geom_hline(yintercept = 0, linetype = "solid", color = "grey20") +
   geom_violin(position = position_dodge(width = 1), scale = "width", size = 1,
               draw_quantiles = c(0.5), alpha = 0.3) +
@@ -251,7 +258,7 @@ entropy_plot <- d_e1 %>%
   guides(fill = F) + 
   labs(x = NULL, y = "entropy change", color = "action response: ") +
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
-        panel.grid.minor = element_blank(),
+        #panel.grid.minor = element_blank(),
         panel.grid.major = element_blank(),
         plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
@@ -263,10 +270,17 @@ sub_plots <- cowplot::plot_grid(rt_plot, entropy_plot, labels = c("B", "C"),
                                 ncol = 1,
                                 rel_heights = c(0.75,1))
 
-cowplot::plot_grid(action_plot, sub_plots, labels = c("A"),
-                   rel_widths = c(1, 0.85))
+cowplot::plot_grid(action_plot_e1, sub_plots, labels = c("A"),
+                   rel_widths = c(1, 0.9))
 ```
 
+Save figure.
+
+```{r}
+ggsave("e1_plot.png", plot = ggplot2::last_plot(), width = 9,
+       path = here::here("writing/cogsci2018/figs"), 
+       scale = 1.2)
+```
 
 ## Experiment 2
 
@@ -286,15 +300,12 @@ e2_action_plot <- d_e2 %>%
   ggplot(aes(x = condition, y = prop, fill = social_condition)) +
   geom_bar(stat = "identity", width = 0.6, position = position_dodge()) +
   lims(y = c(0,1)) +
-  labs(x = NULL, y = "Prop. Participants", fill = "context:",
-       title = "Proportion of participants who chose 'learning' action") +
-  #scale_alpha_discrete(range = c(0.4,1)) + 
-  #ggthemes::scale_fill_ptol() +
+  labs(x = NULL, y = "Prop. Participants", fill = "context:") +
   scale_fill_grey(start = 0.1, end = 0.6)+ 
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
-        legend.position = "bottom",
-        plot.margin=unit(c(1,1,1.5,1.2),"cm")) 
+        #panel.grid.major = element_blank(),
+        plot.margin=unit(c(0.5,1.2,0.5,1),"cm"))
 ```
 
 RT plot
@@ -334,7 +345,7 @@ e2_ent_plot <- d_e2 %>%
   theme(panel.border = element_rect(fill=NA, size=0.5, color = "grey"),
         panel.grid.minor = element_blank(),
         #panel.grid.major = element_blank(),
-        plot.margin=unit(c(0.5,1,0.5,1.2),"cm")) 
+        plot.margin=unit(c(0.5,1,0.5,1.2),"cm"))
 ```
 
 ```{r}
@@ -347,6 +358,8 @@ cowplot::plot_grid(e2_action_plot, sub_plots_e2, labels = c("A"),
 ```
 
 ```{r}
-ggsave("key_plot.pdf", plot = ggplot2::last_plot(), path = here::here(), scale = 1)
+ggsave("e2_plot.png", plot = ggplot2::last_plot(), width = 9,
+       path = here::here("writing/cogsci2018/figs"), 
+       scale = 1.2)
 ```
 
